Added modules that download data from IBKR
Changes to be committed:
	modified:   .gitignore
	modified:   dataget/dataget.py
	modified:   dataget/ibkrData.py
	deleted:    fundamentals/correlation.py
	modified:   options/optionsBlackScholes.py
	deleted:    options/optionsStrats.py
	modified:   risk_free_rate
	modified:   utilities/data_cleaning.py

Untracked files:
	dataget/__init__.py
	dataget/ib_test2.py
	dataget/ibkrData_initialize.py
	dataget/ibkrData_options.py
	dataget/ibkrData_test.py
	options/optionsBS_tutorial.py
	run_script.py
	strategies/optionsStrategies.py
	strategies/risk_free_rate
	technicals/correlation.py
	technicals/options.py
	tests/

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .conda/
+legacy/
 data/
 **/__pycache__/
 fundamentals/risk_free_rate
@@ -6,3 +7,4 @@ passcodes/
 Thoughts/
 thoughts/
 ToDo.txt
+excels/
